--- a/src/content/pages/Corporate.html
+++ b/src/content/pages/Corporate.html
@@ -1,6 +1,6 @@
 ---
 title: 'Corporate Events'
-description: 'Meta description for the page'
+description: 'Elevate your corporate events with Snap N Sweet's premier 360 photobooth services. Engage your team and clients in a world of interactive memories, cutting-edge technology, and personalized setups. Make your corporate gatherings unforgettable with Snap N Sweet.'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'Corporate/'
 eleventyNavigation:
