--- a/src/content/pages/Gallery.html
+++ b/src/content/pages/Gallery.html
@@ -1,6 +1,6 @@
 ---
 title: 'Gallery'
-description: 'Meta description for the page'
+description: 'Explore the captivating moments captured by Snap N Sweet's 360 photobooth. Immerse yourself in a gallery of memories, laughter, and shared experiences. Discover the magic of our cutting-edge technology and personalized setups through our curated collection of photos and videos. Relive the joy with Snap N Sweet.'
 preloadImg: '/assets//assets/images/Videos/cabinets2.jpg'
 permalink: 'Gallery/'
 eleventyNavigation:
