--- a/src/content/pages/Social.html
+++ b/src/content/pages/Social.html
@@ -1,6 +1,6 @@
 ---
 title: 'Social Events'
-description: 'Meta description for the page'
+description: 'Add a touch of magic to your parties with Snap N Sweet's 360 photobooth services. Capture the energy, laughter, and fun of your celebrations with our immersive experience. Elevate your party atmosphere with our personalized setups and state-of-the-art technology. Make your parties unforgettable with Snap N Sweet.'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'Social/'
 eleventyNavigation:
