--- a/src/content/pages/Weddings.html
+++ b/src/content/pages/Weddings.html
@@ -1,6 +1,6 @@
 ---
-title: 'Wedding'
-description: 'Meta description for the page'
+title: 'Weddings'
+description: 'Turn your wedding into an enchanting experience with Snap N Sweet's 360 photobooth services. Let us capture the love, joy, and cherished moments of your special day. Elevate your wedding celebration with our personalized setups and cutting-edge technology. Make memories last forever with Snap N Sweet.'
 preloadImg: '/assets/images/Depositphotos_221000152_XL.jpg'
 permalink: 'Weddings/'
 eleventyNavigation:
