--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,6 +1,6 @@
 ---
 title: 'About'
-description: 'Meta description for the page'
+description: 'Discover Toronto's premier 360 photobooth experience with Snap N Sweet. Immerse your guests in a world of memories, laughter, and shared moments. From cutting-edge technology to personalized setups, let us capture the essence of your event. Create, connect, and celebrate with Snap N Sweet!'
 preloadImg: '/assets/images/Depositphotos_221000152_XL.jpg'
 permalink: 'about/'
 eleventyNavigation:
@@ -8,7 +8,7 @@ eleventyNavigation:
     order: 200
 ---
 
-{% extends "layouts/base.html" %}
+{% extends "layouts/base3.html" %}
 
 {% block head %}
     <link rel="stylesheet" href="/css/about.css">
