--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
-title: 'Snap N Sweet'
-description: 'Meta description for the page'
+title: '360 Photobooth'
+description: 'Capture unforgettable moments with our Toronto 360 Photo Booth. Step into an immersive experience where every angle is captured, creating stunning 360-degree photos. Book now and make your event truly memorable.'
 preloadImg: '/assets/images/Hero.jpeg'
 permalink: '/'
 eleventyNavigation:
