--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -1,6 +1,6 @@
 ---
-title: 'Contact'
-description: 'Meta description for the page'
+title: 'Contact Us'
+description: 'Reach out to Snap N Sweet for inquiries, bookings, and personalized event experiences. Contact us to discuss how our 360 photobooth services can elevate your special occasions. Our team is ready to assist you in creating memorable moments, custom setups, and immersive event entertainment. Get in touch with Snap N Sweet today.'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'contact/'
 eleventyNavigation:
